# Viewer3D

src/: CMakeLists.txt  Makefile
src/doc/: 3d_doc.texi  version.texi
src/models/: broken_model.bj  rename_files.sh
src/sources/: main.cc
src/sources/controller/: controller.cc  controller.h
src/sources/model/: model.cc  model.h  tranformation.cc  tranformation.h
src/sources/view/: OpenGLfunctions.cc  events.cc  model_controller.cc  model_controller.h  view.cc  view.h  view.ui
src/tests/: test_core.h  test_model.cc
